--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@tanstack/react-query": "^5.8.4",
         "axios": "^1.6.2",
+        "dayjs": "^1.11.10",
         "js-cookie": "^3.0.5",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
