--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.18.0",
         "react-tag-input-component": "^2.0.2",
+        "recharts": "^2.10.1",
         "sort-by": "^1.2.0",
         "styled-components": "^6.1.1",
         "sweetalert2": "^11.10.0"
