--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
         "react-icons": "^4.11.0",
+        "react-paginate": "^8.2.0",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.18.0",
         "react-tag-input-component": "^2.0.2",
